--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1036,14 +1036,20 @@ section h2.title_services::after {
   padding: 8rem;
 }
 
-#contact h1 {
-  color: var(--primaryColor);
-  margin: 5rem 1.5rem;
-  font-size: 4.5rem;
+#contact h2 {
+  text-transform: capitalize;
+  font: bold 6rem "sk", sans-serif;
+  margin-bottom: 1rem;
   text-align: center;
-  text-transform: uppercase;
-  font-family: "spartan_regular", sans-serif;
-  font-weight: 500;
+  color: var(--mainBlack);
+}
+
+#contact h2:after {
+  content: "\00a0";
+  display: block;
+  height: 6px;
+  margin-top: 1rem;
+  background: var(--mainBlack);
 }
 
 .contact-form {
@@ -1053,6 +1059,7 @@ section h2.title_services::after {
   flex-wrap: wrap;
   justify-content: center;
   padding: 0 28rem;
+  margin-top: 10rem;
 }
 
 .contact-input {
@@ -1167,7 +1174,7 @@ section h2.title_services::after {
   color: lightgrey;
   font-weight: 400;
   font-size: 1.8rem;
-
+  width: 600px;
   letter-spacing: 3px;
 }
 
@@ -1202,11 +1209,7 @@ section h2.title_services::after {
   color: var(--mainWhite);
 }
 
-@media (max-width: 1500px) {
-  .contact-form {
-    padding: 2rem 10rem;
-  }
-}
+@media (max-width: 1500px) {}
 
 @media (max-width: 1100px) {
   body {
