--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -721,11 +721,11 @@ section h2.title_about::after {
   color: var(--mainBlack);
 }
 
-li>h3 {
+li > h3 {
   font: 4rem "spartan_regular", sans-serif;
 }
 
-li>p {
+li > p {
   font: 1.5rem "spartan_regular", sans-serif;
 }
 
@@ -748,7 +748,7 @@ li>p {
   justify-content: center;
 }
 
-.about_buttons>.button {
+.about_buttons > .button {
   margin: 0 20rem;
 }
 
@@ -782,7 +782,7 @@ img {
   object-fit: cover;
   object-position: center 20%;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   display: block;
 }
 
@@ -823,7 +823,7 @@ img {
   width: 100%;
 }
 
-.work-thumbnail>img {
+.work-thumbnail > img {
   width: auto;
 }
 
@@ -917,7 +917,7 @@ img {
   transition-timing-function: cubic-bezier(0.5, 0, 0.5, 1);
 }
 
-.work-big-image[data-active]~.work-big-image {
+.work-big-image[data-active] ~ .work-big-image {
   transform: translateX(100%);
 }
 
@@ -951,7 +951,7 @@ img {
   z-index: 1;
 }
 
-.work-article[data-active]~.work-article {
+.work-article[data-active] ~ .work-article {
   transform: translateX(100%);
 }
 
@@ -964,12 +964,12 @@ img {
 }
 
 /* ---------------------------------- */
-.work-thumbnail>img {
+.work-thumbnail > img {
   filter: grayscale(100%);
   transition-duration: 0.35s;
 }
 
-.work-thumbnail:active>img {
+.work-thumbnail:active > img {
   transform: scale(0.9);
   transition-duration: 100ms;
 }
@@ -982,8 +982,8 @@ img {
   display: none;
 }
 
-.work-thumbnail[data-active]>img,
-.work-thumbnail:hover>img {
+.work-thumbnail[data-active] > img,
+.work-thumbnail:hover > img {
   filter: grayscale(0%);
 }
 
@@ -1209,7 +1209,8 @@ section h2.title_services::after {
   color: var(--mainWhite);
 }
 
-@media (max-width: 1500px) {}
+@media (max-width: 1500px) {
+}
 
 @media (max-width: 1100px) {
   body {
