--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,7 +81,7 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 100px 80px;
+  padding: 5% 2%;
 }
 
 section:not(.hero):nth-child(even) {
@@ -565,91 +565,52 @@ header nav li {
 
 /* Buttons */
 
-.main_button {
-  align-items: center;
-  margin-top: 5%;
+.buttons {
   display: flex;
-  height: 200px;
-  width: 100%;
   justify-content: center;
-  padding: 0;
-  opacity: 0;
-  transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
-  animation: fade 1s forwards 4s ease-in;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  width: 80rem;
+  margin: 10rem auto 0 auto;
 }
 
-.button span {
-  color: rgba(51, 51, 51, 0.363);
-}
-
-.button {
-  padding: 2px 14px 2px 14px;
-  margin: 5%;
-  position: relative;
+.button_main {
+  flex: 1 1 auto;
+  margin: 1rem 8rem;
+  padding: 2rem;
+  border: 2px solid #f7f7f7;
   text-align: center;
   text-transform: uppercase;
-  color: var(--mainWhite);
-  cursor: pointer;
-  display: block;
   position: relative;
-  transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
-  letter-spacing: 0.13rem;
   overflow: hidden;
-  user-select: none;
+  transition: .8s;
+  font: 2rem "spartan_regular", sans-serif;
 }
 
-.button:hover {
-  color: #000 !important;
-  background-color: transparent;
-  transition: background 0s;
-}
-
-.button:hover:before {
-  left: 0%;
-  right: auto;
-  width: 100%;
-}
-
-.button:before {
-  display: block;
+.button_main:after {
   position: absolute;
-  top: 0px;
-  right: 0px;
-  height: 100%;
-  width: 0px;
-  z-index: -1;
-  content: "";
-  background: #ebebeb;
-  transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+  transition: .8s;
+  content: '';
+  width: 0;
+  left: 50%;
+  bottom: 0;
+  height: 3px;
+  background: #f7f7f7;
 }
 
-.button a {
-  color: var(--mainBlack);
-  font-size: 2rem;
-  font-family: spartan_regular, sans-serif;
-  text-decoration: none;
+.button_main:after {
+  right: 0;
+  left: auto;
 }
 
-.button:hover a {
-  color: var(--mainBlack);
+.button_main:hover {
+  cursor: pointer;
 }
 
-#contact_btn:before {
-  background: var(--primaryColor);
-}
-
-#cnt {
-  border-bottom: 4px solid var(--primaryColor);
-  color: var(--mainBlack);
-}
-
-#srv {
-  border-bottom: 4px solid #ebebeb;
-  color: var(--mainBlack);
-}
-
-#button_span {
-  vertical-align: 2px;
+.button_main:hover:after {
+  width: 100%;
+  left: 0;
 }
 
 @keyframes fade {
@@ -721,11 +682,11 @@ section h2.title_about::after {
   color: var(--mainBlack);
 }
 
-li > h3 {
+li>h3 {
   font: 4rem "spartan_regular", sans-serif;
 }
 
-li > p {
+li>p {
   font: 1.5rem "spartan_regular", sans-serif;
 }
 
@@ -748,7 +709,7 @@ li > p {
   justify-content: center;
 }
 
-.about_buttons > .button {
+.about_buttons>.button {
   margin: 0 20rem;
 }
 
@@ -823,7 +784,7 @@ img {
   width: 100%;
 }
 
-.work-thumbnail > img {
+.work-thumbnail>img {
   width: auto;
 }
 
@@ -917,7 +878,7 @@ img {
   transition-timing-function: cubic-bezier(0.5, 0, 0.5, 1);
 }
 
-.work-big-image[data-active] ~ .work-big-image {
+.work-big-image[data-active]~.work-big-image {
   transform: translateX(100%);
 }
 
@@ -951,7 +912,7 @@ img {
   z-index: 1;
 }
 
-.work-article[data-active] ~ .work-article {
+.work-article[data-active]~.work-article {
   transform: translateX(100%);
 }
 
@@ -964,12 +925,12 @@ img {
 }
 
 /* ---------------------------------- */
-.work-thumbnail > img {
+.work-thumbnail>img {
   filter: grayscale(100%);
   transition-duration: 0.35s;
 }
 
-.work-thumbnail:active > img {
+.work-thumbnail:active>img {
   transform: scale(0.9);
   transition-duration: 100ms;
 }
@@ -982,8 +943,8 @@ img {
   display: none;
 }
 
-.work-thumbnail[data-active] > img,
-.work-thumbnail:hover > img {
+.work-thumbnail[data-active]>img,
+.work-thumbnail:hover>img {
   filter: grayscale(0%);
 }
 
@@ -1209,8 +1170,7 @@ section h2.title_services::after {
   color: var(--mainWhite);
 }
 
-@media (max-width: 1500px) {
-}
+@media (max-width: 1500px) {}
 
 @media (max-width: 1100px) {
   body {
