--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -131,21 +131,22 @@ section:not(.hero):nth-child(even) {
 /* ------------------Menu --------------*/
 
 .nav-icon {
-  width: 3rem;
-  height: 1.2rem;
-  top: 3.5rem;
+  width: 4rem;
+  height: 50px;
+  top: 3.8rem;
   right: 4rem;
   position: absolute;
   transition: 0.5s ease-in-out;
   cursor: pointer;
   margin-top: 7px;
   z-index: 5;
+  opacity: .9;
 }
 
 .nav-icon span {
   display: block;
   position: absolute;
-  height: 2px;
+  height: 4px;
   width: 100%;
   background: var(--mainBlack);
   opacity: 1;
@@ -153,17 +154,21 @@ section:not(.hero):nth-child(even) {
 }
 
 .nav-icon span:nth-child(1) {
-  top: 0rem;
+  top: .2rem;
 }
 
 .nav-icon span:nth-child(2) {
-  top: 0.5rem;
+  top: 1.2rem;
 }
 
 .nav-icon span:nth-child(3) {
-  top: 1.1rem;
+  top: 2.2rem;
   width: 60%;
   right: 0;
+}
+
+.nav-icon:hover {
+  opacity: .8;
 }
 
 .nav-icon:hover span:nth-child(3) {
@@ -623,6 +628,26 @@ header nav li {
 #contact_btn:after {
   background-color: var(--primaryColor);
   background: var(--mainWhite);
+}
+
+.main_page_buttons {
+  animation: appear 5s forwards 0s linear;
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+
+  80% {
+    transform: rotate(xx);
+    opacity: 0;
+  }
+
+  100% {
+    transform: rotate(xx);
+    opacity: 1;
+  }
 }
 
 @keyframes fade {
