--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,4 +2,8 @@
 @import "typography";
 
 @import "header";
+@import "work";
+@import "about";
+@import "services";
+@import "contact";
 @import "footer";
