--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -32,5 +32,19 @@ body {
   color: $color-grey-dark-2;
   font-weight: 300;
   line-height: 1.6;
-  background-color: red;
+}
+
+.container {
+  display: grid;
+  grid-template-rows: 100vh min-content 40vw repeat(3, min-content);
+  grid-template-columns:
+    [full-start]minmax(6rem, 1fr) [center-start]repeat(
+      8,
+      [col-start] minmax(min-content, 14rem) [col-end]
+    )
+    [center-end]minmax(6rem, 1fr) [full-end];
+  & > * {
+    padding: 40px;
+    font-size: 3rem;
+  }
 }
