--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -1,4 +1,34 @@
 .services {
-  background-color: yellow;
-  grid-column: center-start / center-end;
+  grid-column: col-start 2 / col-end 7;
+  margin: 15rem 0;
+  display: grid;
+  //grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 6rem;
+  align-items: start;
+}
+
+.service {
+  float: left;
+  width: 50%;
+  margin-bottom: 6rem;
+
+  display: grid;
+  width: auto;
+  margin-bottom: 0;
+  grid-template-columns: min-content 1fr;
+  grid-row-gap: 1.5rem;
+  grid-column-gap: 2.5rem;
+
+  &__icon {
+    fill: $color-primary;
+    width: 4.5rem;
+    height: 4.5rem;
+    grid-row: 1 / span 2;
+    transform: translateY(-1rem);
+  }
+
+  &__text {
+    font-size: 1.7rem;
+  }
 }
