--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,21 @@ body {
   background-color: #3ee7d6;
   grid-column: full-start / full-end; }
 
+.bg-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: .15;
+  overflow: hidden;
+  object-fit: cover; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
+
 .work {
   background-color: #101d2c;
   grid-column: center-start / center-end; }
@@ -152,8 +167,46 @@ body {
     font-size: 1.7rem; }
 
 .contact {
-  background-color: red;
-  grid-column: center-start / center-end; }
+  grid-column: center-start / center-end;
+  padding: 6rem 8vw;
+  display: grid; }
+
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
+
+.form__input, .form__request {
+  font-size: 1.5rem;
+  font-family: inherit;
+  color: inherit;
+  padding: 1.5rem 2rem;
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.7);
+  border: none;
+  border-bottom: 3px solid transparent;
+  width: 100%;
+  display: block;
+  transition: all 0.3s; }
+  .form__input:focus, .form__request:focus {
+    outline: none;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+    border-bottom: 3px solid #3ee7d6; }
+  .form__input:focus:invalid, .form__request:focus:invalid {
+    border-bottom: 3px solid #101d2c; }
+  .form__input::-webkit-input-placeholder, .form__request::-webkit-input-placeholder {
+    color: #6d5d4b; }
+
+.form__label {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-left: 2rem;
+  margin-top: 0.7rem;
+  display: block;
+  transition: all 0.3s; }
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem); }
 
 .footer {
   background-color: #1e726a;
