--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -10,6 +10,8 @@ $color-grey-light-2: #aaa;
 $color-grey-dark-1: #54483a;
 $color-grey-dark-2: #6d5d4b;
 
+$color-white: #fff;
+$color-black: #000;
 // FONT VARIABLES
 $font-primary: "Nunito", sans-serif;
 $font-display: "Josefin Sans", sans-serif;
