added html to header

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ body {
   font-weight: 700; }
 
 .header {
-  background-color: #3ee7d6;
+  background-color: #f9f7f6;
   grid-column: full-start / full-end; }
 
 .bg-video {
