--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,23 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 50%; } }
 
 body {
   font-family: "Nunito", sans-serif;
   color: #6d5d4b;
   font-weight: 300;
   line-height: 1.6; }
+
+ul,
+nav {
+  list-style: none; }
+
+a {
+  text-decoration: none;
+  color: #aaa; }
 
 .container {
   display: grid;
@@ -64,6 +75,12 @@ body {
   .btn:hover {
     background-color: #1e726a; }
 
+.fa_menu {
+  font-size: 2.2rem; }
+
+.fa:hover {
+  color: #3ee7d6; }
+
 .mb-sm {
   margin-bottom: 2rem; }
 
@@ -83,7 +100,98 @@ body {
 
 .header {
   background-color: #f9f7f6;
-  grid-column: full-start / full-end; }
+  grid-column: full-start / full-end;
+  display: grid;
+  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: repeat(10, 1fr); }
+  @media only screen and (max-width: 50em) {
+    .header {
+      grid-column: 1 / -1; } }
+  @media only screen and (max-width: 37.5em) {
+    .header {
+      padding: 5rem; } }
+  .header__logo {
+    height: 4.5rem;
+    align-self: center;
+    justify-self: center; }
+  .header__sidebar {
+    grid-row: 6 / 11;
+    transform: rotate(90deg);
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-size: 1.3rem;
+    margin: 0 auto;
+    position: absolute;
+    left: -20px;
+    top: 50%;
+    width: 140px;
+    color: #aaa;
+    opacity: 0.6; }
+  .header__big {
+    grid-row: 2 / 4;
+    grid-column: 1 / -1;
+    align-self: center;
+    justify-self: center;
+    color: #d8f9f6;
+    text-transform: uppercase;
+    letter-spacing: 6rem;
+    margin-right: -6rem;
+    font-size: 9rem;
+    font-weight: bold;
+    opacity: 0.2;
+    text-shadow: 6px 5px 0 #3ee7d6; }
+  .header__ideas {
+    grid-row: 4 / 5;
+    grid-column: 1 / -1;
+    justify-self: center;
+    align-self: center;
+    font: bold 7rem "sk", sans-serif;
+    color: #000; }
+  .header__brought {
+    grid-row: 5 / 6;
+    grid-column: 1 / -1;
+    justify-self: center;
+    align-self: center;
+    font: bold 7rem "sk", sans-serif;
+    color: #000; }
+  .header__typing {
+    grid-row: 7 / 8;
+    grid-column: 1 / -1;
+    justify-self: center;
+    font-family: "spartan_regular", sans-serif;
+    font-size: 2rem;
+    opacity: 0;
+    animation: appear 0.8s ease-in forwards;
+    animation-delay: 2.9s; }
+
+@keyframes appear {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 0.9; } }
+  .header__social {
+    grid-row: 5 / 8;
+    grid-column: 10 / 11;
+    justify-self: center;
+    align-self: center; }
+    .header__social img {
+      width: 15px; }
+    .header__social a {
+      margin-right: 20px; }
+      .header__social a:hover img {
+        opacity: 0.6;
+        transition: all ease 0.3s; }
+  .header__btn {
+    grid-row: 8 / 10;
+    grid-column: 3 / 6;
+    align-self: center;
+    padding: 2.5rem;
+    justify-self: start; }
+  .header__btn2 {
+    grid-row: 8 / 10;
+    grid-column: 8 / 10;
+    align-self: center;
+    justify-self: start; }
 
 .bg-video {
   position: fixed;
