--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -16,6 +16,12 @@ $color-black: #000;
 $font-primary: "Nunito", sans-serif;
 $font-display: "Josefin Sans", sans-serif;
 
+// RESPONSIVE BREAKPOINTS
+$bp-largest: 75em; // 1200px
+$bp-large: 62.5em; // 1000px
+$bp-medium: 50em; // 800px;
+$bp-small: 37.5em; // 600px;
+
 *,
 *::before,
 *::after {
@@ -27,6 +33,10 @@ $font-display: "Josefin Sans", sans-serif;
 html {
   box-sizing: border-box;
   font-size: 62.5%; // 10px/16px = 62.5% -> 1rem = 10px
+
+  @media only screen and (max-width: $bp-largest) {
+    font-size: 50%;
+  }
 }
 
 body {
@@ -34,6 +44,15 @@ body {
   color: $color-grey-dark-2;
   font-weight: 300;
   line-height: 1.6;
+}
+ul,
+nav {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: $color-grey-light-2;
 }
 
 .container {
