--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,4 +1,116 @@
 .header {
   background-color: $color-grey-light-1;
   grid-column: full-start / full-end;
+
+  display: grid;
+  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: repeat(10, 1fr);
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: 1 / -1;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 5rem;
+  }
+  &__logo {
+    height: 4.5rem;
+    align-self: center;
+    justify-self: center;
+  }
+
+  &__sidebar {
+    grid-row: 6 / 11;
+    transform: rotate(90deg);
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-size: 1.3rem;
+    margin: 0 auto;
+    position: absolute;
+    left: -20px;
+    top: 50%;
+    width: 140px;
+    color: $color-grey-light-2;
+    opacity: 0.6;
+  }
+
+  &__big {
+    grid-row: 2 / 4;
+    grid-column: 1 / -1;
+    align-self: center;
+    justify-self: center;
+    color: #d8f9f6;
+
+    text-transform: uppercase;
+    letter-spacing: 6rem;
+    margin-right: -6rem;
+
+    font-size: 9rem;
+    font-weight: bold;
+    opacity: 0.2;
+    text-shadow: 6px 5px 0 $color-primary;
+  }
+  &__ideas {
+    grid-row: 4 / 5;
+    grid-column: 1 / -1;
+    justify-self: center;
+    align-self: center;
+    font: bold 7rem "sk", sans-serif;
+    color: $color-black;
+  }
+  &__brought {
+    grid-row: 5 / 6;
+    grid-column: 1 / -1;
+    justify-self: center;
+    align-self: center;
+    font: bold 7rem "sk", sans-serif;
+    color: $color-black;
+  }
+  &__typing {
+    grid-row: 7 / 8;
+    grid-column: 1 / -1;
+    justify-self: center;
+    font-family: "spartan_regular", sans-serif;
+    font-size: 2rem;
+    opacity: 0;
+    animation: appear 0.8s ease-in forwards;
+    animation-delay: 2.9s;
+  }
+  @keyframes appear {
+    0% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 0.9;
+    }
+  }
+  &__social {
+    grid-row: 5 / 8;
+    grid-column: 10 / 11;
+    justify-self: center;
+    align-self: center;
+    img {
+      width: 15px;
+    }
+    a {
+      margin-right: 20px;
+      &:hover img {
+        opacity: 0.6;
+        transition: all ease 0.3s;
+      }
+    }
+  }
+  &__btn {
+    grid-row: 8 / 10;
+    grid-column: 3 / 6;
+    align-self: center;
+    padding: 2.5rem;
+    justify-self: start;
+  }
+  &__btn2 {
+    grid-row: 8 / 10;
+    grid-column: 8 / 10;
+    align-self: center;
+    justify-self: start;
+  }
 }
