--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,7 +1,13 @@
 .header {
   background-color: $color-grey-light-1;
   grid-column: full-start / full-end;
-
+  background-image: linear-gradient(
+      rgba($color-primary, 0.93),
+      rgba($color-white, 0.93)
+    ),
+    url(../img/img2.jpg);
+  background-size: cover;
+  background-position: center;
   display: grid;
   grid-template-rows: repeat(10, 1fr);
   grid-template-columns: repeat(10, 1fr);
@@ -13,23 +19,23 @@
     padding: 5rem;
   }
   &__logo {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
     height: 4.5rem;
     align-self: center;
     justify-self: center;
   }
 
   &__sidebar {
-    grid-row: 6 / 11;
+    grid-row: 6 /8;
+    grid-column: 1 / 2;
+    align-self: start;
     transform: rotate(90deg);
     text-transform: uppercase;
     letter-spacing: 3px;
     font-size: 1.3rem;
-    margin: 0 auto;
-    position: absolute;
-    left: -20px;
-    top: 50%;
-    width: 140px;
-    color: $color-grey-light-2;
+
+    color: $color-black;
     opacity: 0.6;
   }
 
@@ -51,7 +57,7 @@
   }
   &__ideas {
     grid-row: 4 / 5;
-    grid-column: 1 / -1;
+    grid-column: 1/ -1;
     justify-self: center;
     align-self: center;
     font: bold 7rem "sk", sans-serif;
@@ -89,11 +95,9 @@
     grid-column: 10 / 11;
     justify-self: center;
     align-self: center;
-    img {
-      width: 15px;
-    }
+    margin-left: 6rem;
+
     a {
-      margin-right: 20px;
       &:hover img {
         opacity: 0.6;
         transition: all ease 0.3s;
@@ -113,4 +117,66 @@
     align-self: center;
     justify-self: start;
   }
+}
+
+.reveal {
+  position: relative;
+  // width: 7em;
+  margin: 0 auto;
+  & span {
+    opacity: 0;
+    animation: reveal 0.0001s linear forwards;
+    animation-delay: 1.4s;
+  }
+  &::after {
+    content: "";
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 0%;
+    height: 102%;
+    background: $color-black;
+    animation: revealing 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
+    animation-delay: 1s;
+  }
+}
+
+@keyframes revealing {
+  0% {
+    left: 0;
+    width: 0%;
+  }
+
+  50% {
+    left: 0;
+    width: 100%;
+  }
+
+  100% {
+    left: 100%;
+    width: 0%;
+  }
+}
+
+@keyframes reveal {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+#revTwo {
+  width: 7.5em;
+  margin-bottom: 5rem;
+  & span {
+    animation-delay: 2s;
+  }
+}
+
+#revTwo.reveal:after {
+  background: $color-black;
+  animation-delay: 1.4s;
 }
