--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -7,7 +7,7 @@ $color-secondary: #101d2c;
 $color-grey-light-1: #f9f7f6;
 $color-grey-light-2: #aaa;
 
-$color-grey-dark-1: #54483a;
+$color-grey-dark-1: #757575;
 $color-grey-dark-2: #6d5d4b;
 
 $color-white: #fff;
