--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -1,4 +1,30 @@
 .work {
-  background-color: $color-secondary;
+  background-color: $color-grey-dark-1;
   grid-column: center-start / center-end;
+  padding: 3rem;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
+  grid-row-gap: 2rem;
+
+  &__list {
+    display: grid;
+    grid-template-columns: min-content max-content;
+    grid-column-gap: 2rem;
+    grid-row-gap: 5vh;
+    align-items: center;
+  }
+
+  &__img {
+    width: 17rem;
+    border-radius: 1%;
+    display: block;
+  }
+
+  &__sold {
+    text-transform: uppercase;
+    color: $color-grey-light-2;
+    margin-top: -3px;
+  }
 }
